--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cloudinary": "^2.7.0",
+    "midtrans-client": "^1.4.3",
     "multer": "^2.0.2",
     "mysql2": "^3.14.3",
     "passport": "^0.7.0",
