--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@prisma/client": "^6.12.0",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
+    "body-parser": "^2.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cloudinary": "^2.7.0",
@@ -58,6 +59,7 @@
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@types/bcrypt": "^6.0.0",
+    "@types/body-parser": "^1.19.6",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/multer": "^2.0.0",
