--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 #Custom
 # /src/app/midtrans
-/src/app/winpay
-/prisma
+src/app/winpay
+prisma
 /winpay/winpay-private.pem
 /winpay/winpay-public.pem
 
